# wasmtime-resource-paremeter-bug-report

./: .gitignore  Cargo.toml  README.md
src/: bindings.rs  lib.rs
tests/: test.rs
wit/client/: world.wit
wit/server/: world.wit
