[package]
name = "wasmtime_bug_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.79"
wit-bindgen = { version = "0.17.0", default-features = false, features = ["realloc"] }

[dev-dependencies]
wasmtime = "17.0.0"
wasmtime-wasi = "17.0.0"
anyhow = "1.0.79"

[package.metadata.component.target]
path = "wit/server"
